Fix never ending reddit from looking out of place

--- a/_body.scss
+++ b/_body.scss
@@ -563,3 +563,10 @@ h2, label {
 	border: 1px solid #dc5500;
 	box-shadow: 0px 0px 24px #dc5500;
 }
+
+#progressIndicator.neverEndingReddit,
+body .NERPageMarker {
+	background-color: $blue-button-dark-fill;
+	border: 1px solid $blue-button-fill;
+	border-radius: 2px;
+}
